[gd_scene format=3 uid="uid://cw1fs4vp0p4tm"]

[ext_resource type="PackedScene" path="res://src/Board.tscn" id="1"]
[ext_resource type="FontFile" uid="uid://bidxcbkineva8" path="res://assets/orkney/Orkney Bold.otf" id="2"]
[ext_resource type="Script" uid="uid://dyuiaxuvry28u" path="res://src/Game.gd" id="3"]
[ext_resource type="PackedScene" path="res://src/SanDisplay.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://c0fhva7v6808" path="res://src/SettingsMenu.tscn" id="5"]
[ext_resource type="AudioStream" uid="uid://bwevr8ykpn5mf" path="res://assets/sound/move.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://dduxkebeodh7u" path="res://assets/sound/check.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://dy6o2j8gx7x32" path="res://assets/sound/capture.wav" id="8"]
[ext_resource type="AudioStream" uid="uid://ccu0i2ei68mup" path="res://assets/sound/terminal.wav" id="9"]
[ext_resource type="PackedScene" uid="uid://fctovp54ejhp" path="res://src/CreditsMenu.tscn" id="10"]
[ext_resource type="Script" uid="uid://b7ugoehrrxp5r" path="res://src/BotThinkingIndicator.gd" id="11"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/variation_coordinates = {}
cache/0/face_index = 0
cache/0/embolden = 0.0
cache/0/transform = Transform2D(1, 0, 0, 1, 0, 0)
cache/0/spacing_top = 0
cache/0/spacing_bottom = 0
cache/0/spacing_space = 0
cache/0/spacing_glyph = 0
cache/0/baseline_offset = 0.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Game" type="Control" unique_id=1607607920]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="C" type="CenterContainer" parent="." unique_id=1703768777]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="C" unique_id=730249782]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_constants/separation = 12

[node name="H" type="HBoxContainer" parent="C/V" unique_id=851478781]
layout_mode = 2

[node name="LSpacer" type="Control" parent="C/V/H" unique_id=1295388937]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="C/V/H" unique_id=1777540594]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "#StopWaitingForGodot Chess"
horizontal_alignment = 1

[node name="RSpacer" type="Control" parent="C/V/H" unique_id=821739432]
layout_mode = 2
size_flags_horizontal = 3

[node name="H" type="HBoxContainer" parent="C/V/H/RSpacer" unique_id=1231306399]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
theme_override_constants/separation = 20
alignment = 2

[node name="SettingsButton" type="Button" parent="C/V/H/RSpacer/H" unique_id=960402421]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="C/V/H/RSpacer/H" unique_id=2046425439]
layout_mode = 2
text = "Credits"

[node name="C" type="CenterContainer" parent="C/V" unique_id=1547201360]
layout_mode = 2

[node name="V" type="VBoxContainer" parent="C/V/C" unique_id=2084559849]
layout_mode = 2
theme_override_constants/separation = 12

[node name="H" type="HBoxContainer" parent="C/V/C/V" unique_id=580030462]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Board" parent="C/V/C/V/H" unique_id=593486743 instance=ExtResource("1")]
layout_mode = 2

[node name="SanDisplay" parent="C/V/C/V/H" unique_id=1821147659 instance=ExtResource("4")]
layout_mode = 2

[node name="H2" type="HBoxContainer" parent="C/V/C/V" unique_id=401239303]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResetButton" type="Button" parent="C/V/C/V/H2" unique_id=514341862]
layout_mode = 2
text = "New Game"

[node name="FlipButton" type="Button" parent="C/V/C/V/H2" unique_id=494557387]
layout_mode = 2
text = "Flip"

[node name="UndoButton" type="Button" parent="C/V/C/V/H2" unique_id=1878258839]
layout_mode = 2
text = "Undo"

[node name="Spacer" type="Control" parent="C/V/C/V/H2" unique_id=1105125917]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="BotButton" type="Button" parent="C/V/C/V/H2" unique_id=595899201]
layout_mode = 2
text = "Play Bot Move"

[node name="BotCheck" type="CheckBox" parent="C/V/C/V/H2" unique_id=626821999]
layout_mode = 2
text = "Bot Enabled"

[node name="BotTimer" type="Timer" parent="C/V/C/V/H2" unique_id=510042844]
wait_time = 0.1
one_shot = true

[node name="BotThinkingIndicator" type="Control" parent="C/V/C/V/H2" unique_id=1647966617]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
script = ExtResource("11")

[node name="H2" type="HBoxContainer" parent="C/V" unique_id=776654381]
layout_mode = 2
theme_override_constants/separation = 12

[node name="FenText" type="LineEdit" parent="C/V/H2" unique_id=663943903]
layout_mode = 2
size_flags_horizontal = 3

[node name="SetFen" type="Button" parent="C/V/H2" unique_id=549987440]
layout_mode = 2
text = "Set FEN"

[node name="InvalidFen" type="Label" parent="C/V/H2" unique_id=107986849]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.247059, 0.247059, 1)
text = "Invalid FEN"

[node name="InvalidFenTimer" type="Timer" parent="C/V/H2" unique_id=1080505622]
wait_time = 5.0
one_shot = true

[node name="SettingsMenu" parent="." unique_id=1446169887 instance=ExtResource("5")]
oversampling_override = 1.0

[node name="CreditsMenu" parent="." unique_id=549160077 instance=ExtResource("10")]
visible = false
layout_mode = 1

[node name="MoveSound" type="AudioStreamPlayer" parent="." unique_id=1721394747]
stream = ExtResource("6")
volume_db = -6.0

[node name="CaptureSound" type="AudioStreamPlayer" parent="." unique_id=456379974]
stream = ExtResource("8")
volume_db = -6.0

[node name="CheckSound" type="AudioStreamPlayer" parent="." unique_id=2062687617]
stream = ExtResource("7")
volume_db = -6.0

[node name="TerminalSound" type="AudioStreamPlayer" parent="." unique_id=1608531396]
stream = ExtResource("9")
volume_db = -6.0

[connection signal="pressed" from="C/V/H/RSpacer/H/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="C/V/H/RSpacer/H/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="C/V/C/V/H2/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="C/V/C/V/H2/FlipButton" to="." method="_on_FlipButton_pressed"]
[connection signal="pressed" from="C/V/C/V/H2/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="C/V/C/V/H2/BotButton" to="." method="_on_BotButton_pressed"]
[connection signal="pressed" from="C/V/C/V/H2/BotCheck" to="." method="_on_BotCheck_pressed"]
[connection signal="timeout" from="C/V/C/V/H2/BotTimer" to="." method="_on_BotTimer_timeout"]
[connection signal="text_submitted" from="C/V/H2/FenText" to="." method="_on_FenText_text_entered"]
[connection signal="pressed" from="C/V/H2/SetFen" to="." method="_on_SetFen_pressed"]
[connection signal="timeout" from="C/V/H2/InvalidFenTimer" to="." method="_on_InvalidFenTimer_timeout"]
[connection signal="changed" from="SettingsMenu" to="." method="_on_SettingsMenu_settings_changed"]
